Add new footer component and update project files

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+body {
+  /* For better cross-browser support */
+-webkit-text-size-adjust: 100%;
+text-size-adjust: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+  width: 18rem; /* Adjust the width as needed */
+  height: 26rem; /* Adjust the height as needed */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-img-top {
+  height: 15rem; /* Adjust the image height as needed */
+  object-fit: cover; /* This will ensure the image fills the container while maintaining aspect ratio */
 }
